Refactored javascript code to make it more readable. Fixed minor design issues.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,5 +1,7 @@
-
-
+.hand-pointer {
+  cursor: pointer;
+  cursor: hand;
+}
 
 .logout-button {
   margin-left: 20px;
